# GATOR

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
configs/: README.md  datasets.yaml  default.yaml
data/: README.md
src/traffic_risk/: __init__.py  __main__.py  cli.py
src/traffic_risk/features/: extract.py  geometry.py  visibility.py
src/traffic_risk/io/: dataset_registry.py  video_reader.py
src/traffic_risk/perception/: __init__.py  detect_yolo.py  track.py  types.py
src/traffic_risk/utils/: config.py  logging.py  paths.py
src/traffic_risk/viz/: overlays.py  plots.py
tests/: test_dataset_registry.py  test_detect_yolo.py  test_features_extract.py  test_placeholder.py  test_track.py  test_video_reader.py
